# neo-agent

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_all.py
examples/: context_engineering_demo.py  custom_tools_demo.py  memory_rag_demo.py  plan_solve_agent_demo.py  quickstart.py  react_agent_demo.py  reflection_agent_demo.py  simple_agent_demo.py
neo_agent/: __init__.py  __main__.py  cli.py
neo_agent/agents/: __init__.py  plan_solve_agent.py  reflection_agent.py
neo_agent/core/: __init__.py  agent.py  config.py  exceptions.py  llm.py  message.py
neo_agent/tools/: __init__.py
neo_agent/tools/builtin/: __init__.py
neo_agent_kit/: __init__.py  __main__.py  cli.py
neo_agent_kit/agents/: __init__.py  react_agent.py  simple_agent.py
neo_agent_kit/context/: __init__.py
neo_agent_kit/core/: __init__.py  config.py  exceptions.py
neo_agent_kit/memory/: __init__.py  base.py  embedding.py  manager.py
neo_agent_kit/memory/types/: __init__.py  episodic.py  semantic.py  working.py
neo_agent_kit/rag/: __init__.py  document.py  pipeline.py
neo_agent_kit/tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py
neo_agent_kit/tools/builtin/: __init__.py  calculator.py  memory_tool.py  note_tool.py  rag_tool.py  search.py  terminal_tool.py
