[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-agent-kit"
version = "0.3.0"
description = "一个轻量级、教学友好的 AI Agent 框架，支持记忆系统、RAG 和上下文工程"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Neo Agent Team"}
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/user-hw/neo-agent"
Repository = "https://github.com/user-hw/neo-agent"

[project.scripts]
neo-agent-kit = "neo_agent_kit.cli:main"

[project.optional-dependencies]
search = [
    "tavily-python>=0.3.0",
    "google-search-results>=2.4.0",
]
memory = [
    "sentence-transformers>=2.0.0",
]
rag = [
    "sentence-transformers>=2.0.0",
    "pdfplumber>=0.9.0; python_version>='3.10'",
    "python-docx>=0.8.11",
]
all = [
    "neo-agent-kit[search,memory,rag]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["neo_agent_kit*"]
